--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="style/style.css">
     
 </head>
 <body>
@@ -21,10 +21,6 @@
     </header> 
 
     <main>
-      <div class="asdf">
-        <p class="eee">44332111sdfsdfs5555555555555</p>
-
-      </div>
         <section class="about">
             <div class="container">
 
